--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,37 @@
     <link rel="stylesheet" href="reset.css">
     <title>AluraBooks</title>
 </head>
+
 <body>
     <header class="cabeçalho">
         <div class="container">
-             <span class="cabeçalho_menu-hamburguer container_imagem"></span>
-            <img src="img/Logo.svg" alt="Logo Alurabooks" class="container_imagem" >
+            <input type="checkbox" id="menu" class="container_botao">
+            <label for="menu">
+                <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu_titulo">Categorias</li>
+
+                <li class="lista-menu_item"><a href="#" class="lista-menu_link">Programação</a></li>
+                
+                <li class="lista-menu_item"><a href="#" class="lista-menu_link">Front-end</a></li>
+
+                <li class="lista-menu_item"><a href="#" class="lista-menu_link">Ifraestrutura</a></li>
+
+                <li class="lista-menu_item"><a href="#" class="lista-menu_link">Business</a></li>
+
+                <li class="lista-menu_item"><a href="#" class="lista-menu_link">Design & UX</a></li>
+
+            </ul>
+            <img src="img/Logo.svg" alt="Logo Alurabooks" class="container_imagem">
         </div>
 
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos" class="container_imagem" > </a>
-            <a href="#"><img src="img/Sacola.svg" alt="carrinho de compras" class="container_imagem" ></a>
-            <a href="#"><img src="img/Usuario.svg" alt="meu perfil" class="container_imagem" ></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos" class="container_imagem"> </a>
+
+            <a href="#"><img src="img/Sacola.svg" alt="carrinho de compras" class="container_imagem"></a>
+
+            <a href="#"><img src="img/Usuario.svg" alt="meu perfil" class="container_imagem"></a>
         </div>
     </header>
 
@@ -25,4 +46,5 @@
 
 
 </body>
+
 </html>
