--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <title>AluraBooks</title>
 </head>
+<!--Menu e nav-->
 
 <body>
     <header class="cabeçalho">
@@ -20,7 +24,7 @@
                 <li class="lista-menu_titulo">Categorias</li>
 
                 <li class="lista-menu_item"><a href="#" class="lista-menu_link">Programação</a></li>
-                
+
                 <li class="lista-menu_item"><a href="#" class="lista-menu_link">Front-end</a></li>
 
                 <li class="lista-menu_item"><a href="#" class="lista-menu_link">Ifraestrutura</a></li>
@@ -41,6 +45,15 @@
             <a href="#"><img src="img/Usuario.svg" alt="meu perfil" class="container_imagem"></a>
         </div>
     </header>
+
+    <!--Inicio do Banner-->
+    <section class="banner">
+        <h2 class="banner_titulo">Já sabe por onde começar?</h2>
+
+        <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+
+        <input type="search" class="banner_pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
 
 
 
