--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <title>AluraBooks</title>
@@ -55,9 +56,143 @@
         <input type="search" class="banner_pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
+    <!--Inicio do Carrossel usando plugin Swiper-->
+    <section class="carrossel">
+        <h2 class="carrossel_titulo">Novos Lançamentos</h2>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
 
 
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Angular.svg" alt="Livro sobre Angular"></div>
 
+                <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Guia Front-ed"></div>
+
+                <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascript"></div>
+
+                <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Node Js"></div>
+
+                <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+
+                <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro sobre ReactNative"></div>
+                <!--Swiper é um Plugin que importa externamente ao invés de baixar varios arquivos-->
+
+            </div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+
+        <div class="card">
+            <div class="card_descrição">
+                <!--Coluna 1-->
+                <div class="descrição">
+                    <h3 class="descrição_titulo">Talvez você se interesse por...</h3>
+                    <h2 class="descrição_titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descrição_texto">Construindo uma aplicação integrada com oa plataforma do google. </p>
+                </div>
+                <!--Coluna 2-->
+                <img src="img/imagem A.svg" class="descrição_imagem">
+            </div>
+
+            <!--Linha 2-->
+            <div class="card_botões">
+                <ul class="botões">
+                    <!--Coluna 1-->
+                    <li class="botões_item"><img src="img/Favoritos.svg" alt="favoritar livros"></li>
+                    
+                    <li class="botões_item"><img src="img/Sacola.svg" alt="Adicionar ao carrinho "></li>
+                </ul>
+                <!--Coluna 2-->
+                <a href="#" class="botões_ancora">Saiba mais</a>
+            </div>
+        </div>
+    <!--Inicio do Carrossel usando plugin Swiper-->
+    <section class="carrossel">
+        <h2 class="carrossel_titulo">Mais Vendidos</h2>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+
+
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+
+                <div class="swiper-slide"><img src="img/Angular.svg" alt="Livro sobre Angular"></div>
+
+                <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Guia Front-ed"></div>
+
+                <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Node Js"></div>
+
+                <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascript"></div>
+
+                <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro sobre ReactNative"></div>
+                <!--Swiper é um Plugin que importa externamente ao invés de baixar varios arquivos-->
+
+            </div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+
+        <div class="card">
+            <div class="card_descrição">
+                <!--Coluna 1-->
+                <div class="descrição">
+                    <img src="/img/Star 1.svg" alt="">
+                    <img src="/img/Star 1.svg" alt="">
+                    <img src="/img/Star 1.svg" alt="">
+                    <img src="/img/Star 1.svg" alt="">
+                    <img src="/img/Star 1.svg" alt="">
+                    <h3 class="descrição_titulo">Autora do Mês</h3>
+                    <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                </div>
+                <!--Coluna 2-->
+                <img src="img/Perfil-escritora 1.svg" class="descrição_imagem">
+            </div>
+
+            <!--Linha 2-->
+            <div class="card_botões">
+                <ul class="botões">
+                    <!--Coluna 1-->
+                    <li class="botões_item"><img src="img/Favoritos.svg" alt="favoritar livros"></li>
+                    
+                    <li class="botões_item"><img src="img/Sacola.svg" alt="Adicionar ao carrinho "></li>
+                </ul>
+                <!--Coluna 2-->
+                <a href="#" class="botões_ancora">Saiba mais</a>
+            </div>
+        </div>
+
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 2,
+            pagination: {
+                el: ".swiper-pagination",
+                type: "bullets",
+            },
+        });
+    </script>
 </body>
 
 </html>
