Adicionando Seções Contato e Rodapé

--- a/index.html
+++ b/index.html
@@ -179,7 +179,59 @@
         </div>
 
     </section>
+                    <!--Inivcio de Tópicos-->
+    <section class="tópicos">
+        <h2 class="tópicos_titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
 
+        <ul class="tópicos_lista">
+           
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Android</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Marketing Digital</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Agile</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Startups</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">HTML e CSS</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Python</a>
+            </li>
+
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">OO</a>
+            </li>
+            
+            <li class="tópicos_item">
+               <a href="#" class="tópicos_link">Java</a>
+            </li>
+        </ul>
+    </section>
+
+                <!--Inicio de contato-->
+        <section class="contato">
+            <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
+
+            <p class="contato_texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+
+            <input type="email" placeholder="Cadastre seu e-mail" class="contato_email">
+        </section>
+
+        <hr/>
+        <footer class="rodapé">
+            <h2 class="rodapé_titulo">Felipe Santos: Grupo Alura</h2>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
