--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         </section>
 
         <hr/>
+        <!--Inicio do Rodapé-->
         <footer class="rodapé">
             <h2 class="rodapé_titulo">Felipe Santos: Grupo Alura</h2>
         </footer>
