--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container_botao">
-            <label for="menu">
+            <label for="menu" class="container_rotulo">
                 <span class="cabeçalho_menu-hamburguer container_imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -42,7 +42,7 @@
 
         <ul class="opções">
             <input type="checkbox" id="opções-menu" class="opções_botão">
-            <label for="opções-menu">
+            <label for="opções-menu" class="opções_r">
                 <li class="opções_item">Categorias</li>
             </label>
 
